2009-11-19  Mike Gorse  <mgorse@novell.com>

	* Accessible.cs, Desktop.cs: Set Desktop role.

	* Registry.cs: Start an Iterate thread if startLoop set on init.

	* Registry.cs: Set the Desktop instance as an Application's parent.

2009-11-12  Sandy Armstrong  <sanfordarmstrong@gmail.com>

	* Registry.cs: Bus property is now internal instead of public.
	* Makefile.am:
	* AssemblyInfo.cs: Bundle patched ndesk-dbus directly into at-spi-sharp
	with all public types internalized. Set InternalsVisibleTo for tests.

2009-11-12  Mike Gorse  <mgorse@novell.com>

	* Accessible.cs, Component.cs, Selection.cs, Table.cs, RelationSet.cs,
	Application.cs, Registry.cs: Track at-spi changes supporting
	out-of-process accessibles.

2009-10-29  Mike Gorse  <mgorse@novell.com>

	* StateSet.cs: Add constructor and equality operators.

	* StateSet.cs, Accessible.cs: AddState -> Add.

	* Accessible.cs, Desktop.cs, Event.cs: Add ChildAdded, ChildRemoved,
	NameChanged, RoleChanged, StateChanged, and DescriptionChanged.

	* Accessible.cs, Application.cs: Add Dispose.

	* Registry.cs: Dispose applications.

2009-10-14  Mike Gorse  <mgorse@novell.com>

	* Action.cs, Accessible.cs, Application.cs, Component.cs, Document.cs,
	EditableText.cs, Hyperlink.cs, Hypertext.cs, Image.cs, Registry.cs,
	Selection.cs, table.cs, Text.cs, Value.cs: Modify method and signal
	names to correspond with DBus spec.

	* Accessible.cs, Event.cs, Makefile.am: Add event bindings.

	* Accessible.cs, UncachedChildren.cs, Makefile.am: Fetch children of
	ManagesDescendants objects over the wire rather than relying on cache.

2009-09-16  Mike Gorse  <mgorse@novell.com>

	* Document.cs, Hyperlink.cs, Hypertext.cs, Table.cs, Accessible.cs,
	Makefile.am: Add several interface bindings.

	* StateSet.cs: int -> uint for constructor to match dbus spec.
	ContainsState -> Contains to match at-spi spec.

	* Accessible.cs: Clear children before re-adding from an update.
	Don't treat Collection as an unknown interface.
